--- a/app.json
+++ b/app.json
@@ -8,21 +8,21 @@
     "python",
     "pyrogram"
   ],
-  "repository": "https://github.com/disneyteam76/UnzipBot",
-  "website": "https://telegram.dog/disneygrou",
+  "repository": "https://github.com/kishan-kumar-ji/UnzipBot-1",
+  "website": "https://telegram.dog/",
   "success_url": "www.mysteryxd.ml",
   "env": {
     "API_ID": {
-      "description": "Get this value from my.telegram.org or @TgOrgBot"
+      "description": "Get this value from my.telegram.org or "
     },
     "API_HASH": {
-      "description": "Get this value from my.telegram.org or @TgOrgBot"
+      "description": "Get this value from my.telegram.org or "
     },
     "BOT_TOKEN": {
-      "description": "Obtain a Telegram bot token by contacting @BotFather"
+      "description": "Obtain a Telegram bot token by contacting "
     },
     "OWNER_ID": {
-      "description": "Get your id by sending /id to @MissMiley_bot. Fill only if you filled OWNER_NAME.", 
+      "description": "Get your id by sending /id to . Fill only if you filled OWNER_NAME.", 
       "required": false
     }, 
     "OWNER_NAME": {
